# LFP-Decoding

./: CMakeLists.txt  README.md  algorithm.cpp  main.cpp  sample.csv
include/: algorithm.h
